--- a/command-service/package.json
+++ b/command-service/package.json
@@ -30,6 +30,8 @@
     "@prisma/client": "^5.14.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nestjs-prisma": "^0.23.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
