--- a/template-service/package.json
+++ b/template-service/package.json
@@ -26,6 +26,8 @@
     "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "mysql2": "^3.9.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
