--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -30,6 +30,7 @@
     "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "mysql2": "^3.9.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
